# cat-weather-bot

./: .env-sample  .gitignore  .gitpod.yml  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  settings.toml
.github/workflows/: build-and-push-docker-image.yml  docker-build-push.yml  docker-build.yml  unit-tests.yml
assets/: messages.json
cat-weather-bot/: __main__.py  cat_weather_bot.py  config.py  global_variables.py  open_weather_api.py
cat-weather-bot/inc/txt/: chilly.txt  cold.txt  hot.txt  mild.txt  very_cold.txt  very_hot.txt
cat_weather_bot/: __main__.py  config.py  core.py  database.py  models.py  open_weather_api.py  settings.py  thermal_sensation.py  weather_api.py  weather_bot.py
cat_weather_bot/assets/: database.init.json  database.json
cat_weather_bot/assets/inc/txt/: chilly.txt  cold.txt  hot.txt  mild.txt  very_hot.txt
cat_weather_bot/utils/: image.py
tests/: conftest.py  test_image.py  test_message.py  test_thermal_sensation.py  test_weather_api.py
